//
//  logisticsUITests.swift
//  logisticsUITests
//
//  Created by Ivan on 16.05.2020.
//  Copyright © 2020 ITMO. All rights reserved.
//

import XCTest

class logisticsUITests: XCTestCase {
    
    override func setUpWithError() throws {
        continueAfterFailure = false
    }
    
    override func tearDownWithError() throws {
    }
    
    func testExample() throws {
//        let text = "abcdefghij"
//
//        let app = XCUIApplication()
//        app.launch()
//
//        app.textFields["Type text here"].tap()
//        app.textFields["Type text here"].typeText(text)
//        app.buttons["Save"].tap()
//
//        XCTAssertEqual("Text: \(text)", app.staticTexts["Text"].label)
    }
}
